@@ -1,0 +1,30 @@
+#!/bin/bash
+
+make_flag() {
+	rm -f $OLDFILENAME
+	rm -f $NEWFILENAME
+	touch $@
+}
+
+FILEPATH=""
+OLD_VERSION="FREETZ_TARGET_UCLIBC_VERSION_0_9_28"
+NEW_VERSION="FREETZ_TARGET_UCLIBC_VERSION_0_9_29"
+OLDFILENAME="${FILEPATH}.old-uclibc"
+NEWFILENAME="${FILEPATH}.new-uclibc"
+CONFIG_FILE="$FILEPATH.config"
+OLD_VERSION_REQUESTED=$(grep "^$OLD_VERSION" $CONFIG_FILE)
+NEW_VERSION_REQUESTED=$(grep "^$NEW_VERSION" $CONFIG_FILE)
+CHANGED=1
+FILE=""
+if [ $OLD_VERSION_REQUESTED ]; then
+	FILENAME="${OLDFILENAME}"
+else 
+	FILENAME="${NEWFILENAME}"
+fi
+if [ -f "${FILENAME}" ]; then
+	CHANGED=0 
+else
+	CHANGED=1
+fi
+make_flag "${FILENAME}"
+exit $CHANGED
