@@ -5,10 +5,13 @@ Latest changes:
 === devel ===
 
 - Build system:
+    * added simple check for old or new uClibc
 
 - New tools and hooks:
 
 - New patches (read online help for more info):
+    * remove tr069-stuff
+    * remove dect-stuff from 7270
 
 - New packages, libs, modules:
     * hd-idle 0.1
